--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@capacitor/status-bar": "7.0.3",
     "@ionic/react": "^8.5.0",
     "@ionic/react-router": "^8.5.0",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "dexie": "^4.2.1",
     "ionicons": "^7.4.0",
     "react": "19.0.0",
+    "react-datepicker": "^8.8.0",
     "react-dom": "19.0.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4"
